# AutoCutV2

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  =4.0.0  Bug_report_m2Mackbook.rtf  CLAUDE.md  CURRENT_STATUS_NEXT_STEPS.md  DEVELOPMENT.md  IPHONE_H265_FIX_IMPLEMENTATION.md  LICENSE  MEMORY_OPTIMIZATION_PLAN.md  Makefile  PARALLEL_LOADING_IMPLEMENTATION.md  PHASE_1_COMPLETION_SUMMARY.md  README.md  REFACTOR.md  REFACTORING_PROGRESS.md  REFACTORING_TRACKER.md  SETUP_COMMANDS.md  analyze_iphone_codec.py  analyze_multiple_iphone.py  autocut-claude-code-prompt.md  autocut.py  baseline_commits.txt  baseline_line_counts.txt  bug_analysis_comprehensive.md  bug_analysis_m2.md  bug_analysis_oldLinux.md  bug_report_oldLinux.md  comprehensive_debug.py  debug_iphone_transcoding.py  demo_iphone_h265_processing.py  example_enhanced_usage.py  performance_enhancement.md  pyproject.toml  pytest.ini  refactor.md  refactor_2.md  refactor_plan.md  requirements.txt  (+18 more)
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: codebase_structure.md  coding_standards.md  current_development_status.md  project_overview.md  step4_completion_status.md  step5_video_rendering_completion.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
src/: __init__.py  adaptive_monitor.py  api.py  audio_analyzer.py  audio_loader.py  clip_assembler.py  gui.py  system_profiler.py  utils.py  video_analyzer.py
src/compatibility/: __init__.py  moviepy.py
src/core/: __init__.py  exceptions.py  logging_config.py
src/hardware/: __init__.py  detection.py
src/memory/: __init__.py  monitor.py
src/video/: __init__.py  codec_detection.py  encoder.py  format_analyzer.py  normalization.py  timeline_renderer.py  transcoding.py  types.py  validation.py
src/video/assembly/: __init__.py  beat_matcher.py  clip_selector.py  engine.py  timeline.py
src/video/loading/: __init__.py  cache.py  resource_manager.py  strategies.py
src/video/rendering/: __init__.py  audio_sync.py  compositor.py  encoder.py  renderer.py  timeline.py  transitions.py
src/video/rendering/ffmpeg/: __init__.py  cache_manager.py  hardware_accelerator.py  integration_example.py  memory_monitor.py  streaming_analyzer.py
test_media/: ._IMG_0431.mov  ._IMG_0472.mov  ._IMG_0488.mov  ._IMG_0502.mov  ._IMG_0511.mov  ._IMG_0525.mov  ._IMG_0579.mov  ._IMG_0596.mov  ._IMG_0604.mov  ._IMG_0608.mov
tests/: conftest.py
tests/cli/: __init__.py  test_cli_interface.py
tests/integration/: test_api_integration.py  test_full_pipeline.py  test_iphone_h265_workflow.py
tests/performance/: test_performance_quality.py
tests/process_pipeline/: __init__.py  test_process_pipeline.py  test_quick_validation.py
tests/regression/: __init__.py  test_regressions.py
tests/reliability/: __init__.py  test_production_reliability.py
tests/unit/: test_basic_functionality.py  test_codec_detection.py  test_codec_detection.py.skip  test_hardware_detection.py  test_hardware_detection.py.skip  test_transcoding.py  test_transcoding.py.skip  test_video_validation.py
